# from_xlsx_to_csv

./: .gitignore  README.md  main.py  pyproject.toml
data/: irregular_verbs.xlsx
