[tool.poetry]
name = "dictionary_from_xlsx_to_csv"
version = "0.1.0"
description = "Script for automatic csv generation based on the dictionary of irregular verbs in the xlsx file"
authors = ["Yury Borodich <xkxixnxgx@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
